--- a/ndmanager/doc/en/index.docbook
+++ b/ndmanager/doc/en/index.docbook
@@ -1460,7 +1460,7 @@ information here.
 -->
 
 <para>
-&ndmanager; requires KDE >= 3.1, QT >= 3.1 and <ulink url="http://www.xmlsoft.org/downloads.html">libxml2</ulink> >= 2.5.4
+&ndmanager; requires QT >= 4.8 and <ulink url="http://www.xmlsoft.org/downloads.html">libxml2</ulink> >= 2.5.4
 </para>
 <para>
 To build &ndmanager; from source, you will also need the corresponding devel packages and an ANSI C++ Standard compliant compiler (gcc version 3.2.2 is known to work).
@@ -1473,7 +1473,7 @@ To build &ndmanager; from source, you will also need the corresponding devel pac
 <para>
 In order to compile and install &ndmanager; on your system, download and extract the source archive, then type the following in the base directory:
 <screen width="40">
-<prompt>%</prompt> <userinput>./configure --prefix=`kde-config --prefix`</userinput>
+	<prompt>%</prompt> <userinput>cmake -DCMAKE_INSTALL_PREFIX=... ./</userinput>
 <prompt>%</prompt> <userinput>cd src</userinput>
 <prompt>%</prompt> <userinput>make</userinput>
 <prompt>%</prompt> <userinput>make install</userinput>
